2008-09-29  Zeeshan Ali (Khattak)  <zeeshanak@gnome.org>

	* src/av-cp/playlist-treeview.c:

	Use BrowseData to keep ref to ContentDirectory proxy.

2008-09-29  Zeeshan Ali (Khattak)  <zeeshanak@gnome.org>

	* src/av-cp/gui.c:
	* src/network-light/upnp.c:
	* src/universal-cp/gui.c:

	Don't initialize thread system if it is already initialized.

2008-09-22  Ross Burton  <ross@linux.intel.com>

	* data/Makefile.am:
	Don't install the AV glade and desktop files if AV tools are disabled.

2008-09-22  Ross Burton  <ross@linux.intel.com>

	* src/network-light/upnp.[ch]:
	Fix compile errors (well, warnings after the previous commit).

2008-09-22  Ross Burton  <ross@linux.intel.com>

	* configure.ac:
	Don't ever use -Werror, it's stupid. Just always do -Wall.

2008-09-07  Zeeshan Ali (Khattak)  <zeeshanak@gnome.org>

	* NEWS:
	* README:

	Update the NEWS and README files as per the latest changes.

2008-09-06  Zeeshan Ali (Khattak)  <zeeshanak@gnome.org>

	* src/network-light/upnp.c:

	Refactor: Put client and server (de)initialization in separate
	functions.

2008-09-06  Zeeshan Ali (Khattak)  <zeeshanak@gnome.org>

	* src/network-light/gui.c:
	* src/network-light/upnp.c:

	The UI now controls all network lights on the network, not just itself.

2008-08-23  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* NEWS:

	Update NEWS file according to the last change.

2008-08-21  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/playlist-treeview.c:

	No need to add orphan objects to tree.

2008-08-12  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* NEWS:

	Update NEWS file for release 0.6.1.

2008-08-12  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* configure.ac:

	Bump version number to 0.6.1.

2008-08-12  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* configure.ac:
	* src/av-cp/Makefile.am:
	* src/network-light/Makefile.am:
	* src/universal-cp/Makefile.am:

	Explicitly require and link to libgthread-2.0. This should fix the
	build issues on Rawhide.
