@@ -2,6 +2,13 @@
 
 	* src/av-cp/playlist-treeview.c:
 
+	Pass the whole BrowseData to DIDL handling functions rather than just
+	ContentDirectory proxy.
+
+2008-09-29  Zeeshan Ali (Khattak)  <zeeshanak@gnome.org>
+
+	* src/av-cp/playlist-treeview.c:
+
 	Use BrowseData to keep ref to ContentDirectory proxy.
 
 2008-09-29  Zeeshan Ali (Khattak)  <zeeshanak@gnome.org>
